--- a/openApiDocs/v1.0/Devices.CloudPrint.yml
+++ b/openApiDocs/v1.0/Devices.CloudPrint.yml
@@ -898,7 +898,7 @@ paths:
         - print.printer
       summary: Get ref of connectors from print
       description: The connectors that are associated with the printer.
-      operationId: print.printers_ListRefConnectors
+      operationId: print.printers_ListConnectorsByRef
       parameters:
         - name: printer-id
           in: path
@@ -965,7 +965,7 @@ paths:
         - print.printer
       summary: Create new navigation property ref to connectors for print
       description: The connectors that are associated with the printer.
-      operationId: print.printers_CreateRefConnectors
+      operationId: print.printers_CreateConnectorsByRef
       parameters:
         - name: printer-id
           in: path
@@ -1139,7 +1139,7 @@ paths:
         - print.printer
       summary: Get ref of shares from print
       description: 'The list of printerShares that are associated with the printer. Currently, only one printerShare can be associated with the printer. Read-only. Nullable.'
-      operationId: print.printers_ListRefShares
+      operationId: print.printers_ListSharesByRef
       parameters:
         - name: printer-id
           in: path
@@ -1214,7 +1214,7 @@ paths:
         - print.printer
       summary: Create new navigation property ref to shares for print
       description: 'The list of printerShares that are associated with the printer. Currently, only one printerShare can be associated with the printer. Read-only. Nullable.'
-      operationId: print.printers_CreateRefShares
+      operationId: print.printers_CreateSharesByRef
       parameters:
         - name: printer-id
           in: path
@@ -1563,7 +1563,7 @@ paths:
         - print.printer
       summary: Get ref of definition from print
       description: An abstract definition that will be used to create a printTask when triggered by a print event. Read-only.
-      operationId: print.printers.taskTriggers_GetRefDefinition
+      operationId: print.printers.taskTriggers_GetDefinitionByRef
       parameters:
         - name: printer-id
           in: path
@@ -1600,7 +1600,7 @@ paths:
         - print.printer
       summary: Update the ref of navigation property definition in print
       description: An abstract definition that will be used to create a printTask when triggered by a print event. Read-only.
-      operationId: print.printers.taskTriggers_SetRefDefinition
+      operationId: print.printers.taskTriggers_SetDefinitionByRef
       parameters:
         - name: printer-id
           in: path
@@ -1636,7 +1636,7 @@ paths:
         - print.printer
       summary: Delete ref of navigation property definition for print
       description: An abstract definition that will be used to create a printTask when triggered by a print event. Read-only.
-      operationId: print.printers.taskTriggers_DeleteRefDefinition
+      operationId: print.printers.taskTriggers_DeleteDefinitionByRef
       parameters:
         - name: printer-id
           in: path
@@ -2677,7 +2677,7 @@ paths:
         - print.printerShare
       summary: Get ref of allowedGroups from print
       description: The groups whose users have access to print using the printer.
-      operationId: print.shares_ListRefAllowedGroups
+      operationId: print.shares_ListAllowedGroupsByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -2810,7 +2810,7 @@ paths:
         - print.printerShare
       summary: Create new navigation property ref to allowedGroups for print
       description: The groups whose users have access to print using the printer.
-      operationId: print.shares_CreateRefAllowedGroups
+      operationId: print.shares_CreateAllowedGroupsByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -3228,7 +3228,7 @@ paths:
         - print.printerShare
       summary: Get ref of allowedUsers from print
       description: The users who have access to print using the printer.
-      operationId: print.shares_ListRefAllowedUsers
+      operationId: print.shares_ListAllowedUsersByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -3423,7 +3423,7 @@ paths:
         - print.printerShare
       summary: Create new navigation property ref to allowedUsers for print
       description: The users who have access to print using the printer.
-      operationId: print.shares_CreateRefAllowedUsers
+      operationId: print.shares_CreateAllowedUsersByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -3545,7 +3545,7 @@ paths:
         - print.printerShare
       summary: Get ref of printer from print
       description: The printer that this printer share is related to.
-      operationId: print.shares_GetRefPrinter
+      operationId: print.shares_GetPrinterByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -3586,7 +3586,7 @@ paths:
         - print.printerShare
       summary: Update the ref of navigation property printer in print
       description: The printer that this printer share is related to.
-      operationId: print.shares_SetRefPrinter
+      operationId: print.shares_SetPrinterByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -3615,7 +3615,7 @@ paths:
         - print.printerShare
       summary: Delete ref of navigation property printer for print
       description: The printer that this printer share is related to.
-      operationId: print.shares_DeleteRefPrinter
+      operationId: print.shares_DeletePrinterByRef
       parameters:
         - name: printerShare-id
           in: path
@@ -4201,7 +4201,7 @@ paths:
         - print.printTaskDefinition
       summary: Get ref of definition from print
       description: The printTaskDefinition that was used to create this task. Read-only.
-      operationId: print.taskDefinitions.tasks_GetRefDefinition
+      operationId: print.taskDefinitions.tasks_GetDefinitionByRef
       parameters:
         - name: printTaskDefinition-id
           in: path
@@ -4238,7 +4238,7 @@ paths:
         - print.printTaskDefinition
       summary: Update the ref of navigation property definition in print
       description: The printTaskDefinition that was used to create this task. Read-only.
-      operationId: print.taskDefinitions.tasks_SetRefDefinition
+      operationId: print.taskDefinitions.tasks_SetDefinitionByRef
       parameters:
         - name: printTaskDefinition-id
           in: path
@@ -4274,7 +4274,7 @@ paths:
         - print.printTaskDefinition
       summary: Delete ref of navigation property definition for print
       description: The printTaskDefinition that was used to create this task. Read-only.
-      operationId: print.taskDefinitions.tasks_DeleteRefDefinition
+      operationId: print.taskDefinitions.tasks_DeleteDefinitionByRef
       parameters:
         - name: printTaskDefinition-id
           in: path
@@ -4372,7 +4372,7 @@ paths:
         - print.printTaskDefinition
       summary: Get ref of trigger from print
       description: The printTaskTrigger that triggered this task's execution. Read-only.
-      operationId: print.taskDefinitions.tasks_GetRefTrigger
+      operationId: print.taskDefinitions.tasks_GetTriggerByRef
       parameters:
         - name: printTaskDefinition-id
           in: path
@@ -4409,7 +4409,7 @@ paths:
         - print.printTaskDefinition
       summary: Update the ref of navigation property trigger in print
       description: The printTaskTrigger that triggered this task's execution. Read-only.
-      operationId: print.taskDefinitions.tasks_SetRefTrigger
+      operationId: print.taskDefinitions.tasks_SetTriggerByRef
       parameters:
         - name: printTaskDefinition-id
           in: path
@@ -4445,7 +4445,7 @@ paths:
         - print.printTaskDefinition
       summary: Delete ref of navigation property trigger for print
       description: The printTaskTrigger that triggered this task's execution. Read-only.
-      operationId: print.taskDefinitions.tasks_DeleteRefTrigger
+      operationId: print.taskDefinitions.tasks_DeleteTriggerByRef
       parameters:
         - name: printTaskDefinition-id
           in: path
