--- a/openApiDocs/v1.0/Education.yml
+++ b/openApiDocs/v1.0/Education.yml
@@ -3586,7 +3586,7 @@ paths:
         - education.educationClass
       summary: Get ref of group from education
       description: The underlying Microsoft 365 group object.
-      operationId: education.classes_GetRefGroup
+      operationId: education.classes_GetGroupByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -3719,7 +3719,7 @@ paths:
         - education.educationClass
       summary: Update the ref of navigation property group in education
       description: The underlying Microsoft 365 group object.
-      operationId: education.classes_SetRefGroup
+      operationId: education.classes_SetGroupByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -3748,7 +3748,7 @@ paths:
         - education.educationClass
       summary: Delete ref of navigation property group for education
       description: The underlying Microsoft 365 group object.
-      operationId: education.classes_DeleteRefGroup
+      operationId: education.classes_DeleteGroupByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -3957,7 +3957,7 @@ paths:
         - education.educationClass
       summary: Get ref of members from education
       description: All users in the class. Nullable.
-      operationId: education.classes_ListRefMembers
+      operationId: education.classes_ListMembersByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -4074,7 +4074,7 @@ paths:
         - education.educationClass
       summary: Create new navigation property ref to members for education
       description: All users in the class. Nullable.
-      operationId: education.classes_CreateRefMembers
+      operationId: education.classes_CreateMembersByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -4267,7 +4267,7 @@ paths:
         - education.educationClass
       summary: Get ref of schools from education
       description: All schools that this class is associated with. Nullable.
-      operationId: education.classes_ListRefSchools
+      operationId: education.classes_ListSchoolsByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -4352,7 +4352,7 @@ paths:
         - education.educationClass
       summary: Create new navigation property ref to schools for education
       description: All schools that this class is associated with. Nullable.
-      operationId: education.classes_CreateRefSchools
+      operationId: education.classes_CreateSchoolsByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -4597,7 +4597,7 @@ paths:
         - education.educationClass
       summary: Get ref of teachers from education
       description: All teachers in the class. Nullable.
-      operationId: education.classes_ListRefTeachers
+      operationId: education.classes_ListTeachersByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -4714,7 +4714,7 @@ paths:
         - education.educationClass
       summary: Create new navigation property ref to teachers for education
       description: All teachers in the class. Nullable.
-      operationId: education.classes_CreateRefTeachers
+      operationId: education.classes_CreateTeachersByRef
       parameters:
         - name: educationClass-id
           in: path
@@ -5047,7 +5047,7 @@ paths:
         - education.educationUser
       summary: Get ref of classes from education
       description: Classes to which the user belongs. Nullable.
-      operationId: education.me_ListRefClasses
+      operationId: education.me_ListClassesByRef
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -5119,7 +5119,7 @@ paths:
         - education.educationUser
       summary: Create new navigation property ref to classes for education
       description: Classes to which the user belongs. Nullable.
-      operationId: education.me_CreateRefClasses
+      operationId: education.me_CreateClassesByRef
       requestBody:
         description: New navigation property ref value
         content:
@@ -5517,7 +5517,7 @@ paths:
         - education.educationUser
       summary: Get ref of schools from education
       description: Schools to which the user belongs. Nullable.
-      operationId: education.me_ListRefSchools
+      operationId: education.me_ListSchoolsByRef
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -5595,7 +5595,7 @@ paths:
         - education.educationUser
       summary: Create new navigation property ref to schools for education
       description: Schools to which the user belongs. Nullable.
-      operationId: education.me_CreateRefSchools
+      operationId: education.me_CreateSchoolsByRef
       requestBody:
         description: New navigation property ref value
         content:
@@ -5766,7 +5766,7 @@ paths:
         - education.educationUser
       summary: Get ref of taughtClasses from education
       description: Classes for which the user is a teacher.
-      operationId: education.me_ListRefTaughtClasses
+      operationId: education.me_ListTaughtClassesByRef
       parameters:
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
@@ -5838,7 +5838,7 @@ paths:
         - education.educationUser
       summary: Create new navigation property ref to taughtClasses for education
       description: Classes for which the user is a teacher.
-      operationId: education.me_CreateRefTaughtClasses
+      operationId: education.me_CreateTaughtClassesByRef
       requestBody:
         description: New navigation property ref value
         content:
@@ -6181,7 +6181,7 @@ paths:
         - education.educationUser
       summary: Get ref of user from education
       description: The directory user corresponding to this user.
-      operationId: education.me_GetRefUser
+      operationId: education.me_GetUserByRef
       responses:
         '200':
           description: Retrieved navigation property link
@@ -6290,7 +6290,7 @@ paths:
         - education.educationUser
       summary: Update the ref of navigation property user in education
       description: The directory user corresponding to this user.
-      operationId: education.me_SetRefUser
+      operationId: education.me_SetUserByRef
       requestBody:
         description: New navigation property ref values
         content:
@@ -6311,7 +6311,7 @@ paths:
         - education.educationUser
       summary: Delete ref of navigation property user for education
       description: The directory user corresponding to this user.
-      operationId: education.me_DeleteRefUser
+      operationId: education.me_DeleteUserByRef
       parameters:
         - name: If-Match
           in: header
@@ -6679,7 +6679,7 @@ paths:
         - education.educationSchool
       summary: Get ref of administrativeUnit from education
       description: The underlying administrativeUnit for this school.
-      operationId: education.schools_GetRefAdministrativeUnit
+      operationId: education.schools_GetAdministrativeUnitByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -6716,7 +6716,7 @@ paths:
         - education.educationSchool
       summary: Update the ref of navigation property administrativeUnit in education
       description: The underlying administrativeUnit for this school.
-      operationId: education.schools_SetRefAdministrativeUnit
+      operationId: education.schools_SetAdministrativeUnitByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -6745,7 +6745,7 @@ paths:
         - education.educationSchool
       summary: Delete ref of navigation property administrativeUnit for education
       description: The underlying administrativeUnit for this school.
-      operationId: education.schools_DeleteRefAdministrativeUnit
+      operationId: education.schools_DeleteAdministrativeUnitByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -6903,7 +6903,7 @@ paths:
         - education.educationSchool
       summary: Get ref of classes from education
       description: Classes taught at the school. Nullable.
-      operationId: education.schools_ListRefClasses
+      operationId: education.schools_ListClassesByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -6982,7 +6982,7 @@ paths:
         - education.educationSchool
       summary: Create new navigation property ref to classes for education
       description: Classes taught at the school. Nullable.
-      operationId: education.schools_CreateRefClasses
+      operationId: education.schools_CreateClassesByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -7227,7 +7227,7 @@ paths:
         - education.educationSchool
       summary: Get ref of users from education
       description: Users in the school. Nullable.
-      operationId: education.schools_ListRefUsers
+      operationId: education.schools_ListUsersByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -7344,7 +7344,7 @@ paths:
         - education.educationSchool
       summary: Create new navigation property ref to users for education
       description: Users in the school. Nullable.
-      operationId: education.schools_CreateRefUsers
+      operationId: education.schools_CreateUsersByRef
       parameters:
         - name: educationSchool-id
           in: path
@@ -7913,7 +7913,7 @@ paths:
         - education.educationUser
       summary: Get ref of classes from education
       description: Classes to which the user belongs. Nullable.
-      operationId: education.users_ListRefClasses
+      operationId: education.users_ListClassesByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -7992,7 +7992,7 @@ paths:
         - education.educationUser
       summary: Create new navigation property ref to classes for education
       description: Classes to which the user belongs. Nullable.
-      operationId: education.users_CreateRefClasses
+      operationId: education.users_CreateClassesByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -8449,7 +8449,7 @@ paths:
         - education.educationUser
       summary: Get ref of schools from education
       description: Schools to which the user belongs. Nullable.
-      operationId: education.users_ListRefSchools
+      operationId: education.users_ListSchoolsByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -8534,7 +8534,7 @@ paths:
         - education.educationUser
       summary: Create new navigation property ref to schools for education
       description: Schools to which the user belongs. Nullable.
-      operationId: education.users_CreateRefSchools
+      operationId: education.users_CreateSchoolsByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -8728,7 +8728,7 @@ paths:
         - education.educationUser
       summary: Get ref of taughtClasses from education
       description: Classes for which the user is a teacher.
-      operationId: education.users_ListRefTaughtClasses
+      operationId: education.users_ListTaughtClassesByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -8807,7 +8807,7 @@ paths:
         - education.educationUser
       summary: Create new navigation property ref to taughtClasses for education
       description: Classes for which the user is a teacher.
-      operationId: education.users_CreateRefTaughtClasses
+      operationId: education.users_CreateTaughtClassesByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -9265,7 +9265,7 @@ paths:
         - education.educationUser
       summary: Get ref of user from education
       description: The directory user corresponding to this user.
-      operationId: education.users_GetRefUser
+      operationId: education.users_GetUserByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -9474,7 +9474,7 @@ paths:
         - education.educationUser
       summary: Update the ref of navigation property user in education
       description: The directory user corresponding to this user.
-      operationId: education.users_SetRefUser
+      operationId: education.users_SetUserByRef
       parameters:
         - name: educationUser-id
           in: path
@@ -9503,7 +9503,7 @@ paths:
         - education.educationUser
       summary: Delete ref of navigation property user for education
       description: The directory user corresponding to this user.
-      operationId: education.users_DeleteRefUser
+      operationId: education.users_DeleteUserByRef
       parameters:
         - name: educationUser-id
           in: path
