--- a/openApiDocs/v1.0/Teams.yml
+++ b/openApiDocs/v1.0/Teams.yml
@@ -1209,7 +1209,7 @@ paths:
         - chats.teamsAppInstallation
       summary: Get ref of teamsApp from chats
       description: The app that is installed.
-      operationId: chats.installedApps_GetRefTeamsApp
+      operationId: chats.installedApps_GetTeamsAppByRef
       parameters:
         - name: chat-id
           in: path
@@ -1246,7 +1246,7 @@ paths:
         - chats.teamsAppInstallation
       summary: Update the ref of navigation property teamsApp in chats
       description: The app that is installed.
-      operationId: chats.installedApps_SetRefTeamsApp
+      operationId: chats.installedApps_SetTeamsAppByRef
       parameters:
         - name: chat-id
           in: path
@@ -1282,7 +1282,7 @@ paths:
         - chats.teamsAppInstallation
       summary: Delete ref of navigation property teamsApp for chats
       description: The app that is installed.
-      operationId: chats.installedApps_DeleteRefTeamsApp
+      operationId: chats.installedApps_DeleteTeamsAppByRef
       parameters:
         - name: chat-id
           in: path
@@ -1387,7 +1387,7 @@ paths:
         - chats.teamsAppInstallation
       summary: Get ref of teamsAppDefinition from chats
       description: The details of this version of the app.
-      operationId: chats.installedApps_GetRefTeamsAppDefinition
+      operationId: chats.installedApps_GetTeamsAppDefinitionByRef
       parameters:
         - name: chat-id
           in: path
@@ -1424,7 +1424,7 @@ paths:
         - chats.teamsAppInstallation
       summary: Update the ref of navigation property teamsAppDefinition in chats
       description: The details of this version of the app.
-      operationId: chats.installedApps_SetRefTeamsAppDefinition
+      operationId: chats.installedApps_SetTeamsAppDefinitionByRef
       parameters:
         - name: chat-id
           in: path
@@ -1460,7 +1460,7 @@ paths:
         - chats.teamsAppInstallation
       summary: Delete ref of navigation property teamsAppDefinition for chats
       description: The details of this version of the app.
-      operationId: chats.installedApps_DeleteRefTeamsAppDefinition
+      operationId: chats.installedApps_DeleteTeamsAppDefinitionByRef
       parameters:
         - name: chat-id
           in: path
@@ -3138,7 +3138,7 @@ paths:
         - chats.teamsTab
       summary: Get ref of teamsApp from chats
       description: The application that is linked to the tab.
-      operationId: chats.tabs_GetRefTeamsApp
+      operationId: chats.tabs_GetTeamsAppByRef
       parameters:
         - name: chat-id
           in: path
@@ -3175,7 +3175,7 @@ paths:
         - chats.teamsTab
       summary: Update the ref of navigation property teamsApp in chats
       description: The application that is linked to the tab.
-      operationId: chats.tabs_SetRefTeamsApp
+      operationId: chats.tabs_SetTeamsAppByRef
       parameters:
         - name: chat-id
           in: path
@@ -3211,7 +3211,7 @@ paths:
         - chats.teamsTab
       summary: Delete ref of navigation property teamsApp for chats
       description: The application that is linked to the tab.
-      operationId: chats.tabs_DeleteRefTeamsApp
+      operationId: chats.tabs_DeleteTeamsAppByRef
       parameters:
         - name: chat-id
           in: path
@@ -6151,7 +6151,7 @@ paths:
         - teams.channel
       summary: Get ref of teamsApp from teams
       description: The application that is linked to the tab.
-      operationId: teams.channels.tabs_GetRefTeamsApp
+      operationId: teams.channels.tabs_GetTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -6196,7 +6196,7 @@ paths:
         - teams.channel
       summary: Update the ref of navigation property teamsApp in teams
       description: The application that is linked to the tab.
-      operationId: teams.channels.tabs_SetRefTeamsApp
+      operationId: teams.channels.tabs_SetTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -6239,7 +6239,7 @@ paths:
         - teams.channel
       summary: Delete ref of navigation property teamsApp for teams
       description: The application that is linked to the tab.
-      operationId: teams.channels.tabs_DeleteRefTeamsApp
+      operationId: teams.channels.tabs_DeleteTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -6554,7 +6554,7 @@ paths:
       tags:
         - teams.group
       summary: Get ref of group from teams
-      operationId: teams_GetRefGroup
+      operationId: teams_GetGroupByRef
       parameters:
         - name: team-id
           in: path
@@ -6686,7 +6686,7 @@ paths:
       tags:
         - teams.group
       summary: Update the ref of navigation property group in teams
-      operationId: teams_SetRefGroup
+      operationId: teams_SetGroupByRef
       parameters:
         - name: team-id
           in: path
@@ -6714,7 +6714,7 @@ paths:
       tags:
         - teams.group
       summary: Delete ref of navigation property group for teams
-      operationId: teams_DeleteRefGroup
+      operationId: teams_DeleteGroupByRef
       parameters:
         - name: team-id
           in: path
@@ -7086,7 +7086,7 @@ paths:
         - teams.teamsAppInstallation
       summary: Get ref of teamsApp from teams
       description: The app that is installed.
-      operationId: teams.installedApps_GetRefTeamsApp
+      operationId: teams.installedApps_GetTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -7123,7 +7123,7 @@ paths:
         - teams.teamsAppInstallation
       summary: Update the ref of navigation property teamsApp in teams
       description: The app that is installed.
-      operationId: teams.installedApps_SetRefTeamsApp
+      operationId: teams.installedApps_SetTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -7159,7 +7159,7 @@ paths:
         - teams.teamsAppInstallation
       summary: Delete ref of navigation property teamsApp for teams
       description: The app that is installed.
-      operationId: teams.installedApps_DeleteRefTeamsApp
+      operationId: teams.installedApps_DeleteTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -7264,7 +7264,7 @@ paths:
         - teams.teamsAppInstallation
       summary: Get ref of teamsAppDefinition from teams
       description: The details of this version of the app.
-      operationId: teams.installedApps_GetRefTeamsAppDefinition
+      operationId: teams.installedApps_GetTeamsAppDefinitionByRef
       parameters:
         - name: team-id
           in: path
@@ -7301,7 +7301,7 @@ paths:
         - teams.teamsAppInstallation
       summary: Update the ref of navigation property teamsAppDefinition in teams
       description: The details of this version of the app.
-      operationId: teams.installedApps_SetRefTeamsAppDefinition
+      operationId: teams.installedApps_SetTeamsAppDefinitionByRef
       parameters:
         - name: team-id
           in: path
@@ -7337,7 +7337,7 @@ paths:
         - teams.teamsAppInstallation
       summary: Delete ref of navigation property teamsAppDefinition for teams
       description: The details of this version of the app.
-      operationId: teams.installedApps_DeleteRefTeamsAppDefinition
+      operationId: teams.installedApps_DeleteTeamsAppDefinitionByRef
       parameters:
         - name: team-id
           in: path
@@ -10048,7 +10048,7 @@ paths:
         - teams.channel
       summary: Get ref of teamsApp from teams
       description: The application that is linked to the tab.
-      operationId: teams.primaryChannel.tabs_GetRefTeamsApp
+      operationId: teams.primaryChannel.tabs_GetTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -10085,7 +10085,7 @@ paths:
         - teams.channel
       summary: Update the ref of navigation property teamsApp in teams
       description: The application that is linked to the tab.
-      operationId: teams.primaryChannel.tabs_SetRefTeamsApp
+      operationId: teams.primaryChannel.tabs_SetTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -10121,7 +10121,7 @@ paths:
         - teams.channel
       summary: Delete ref of navigation property teamsApp for teams
       description: The application that is linked to the tab.
-      operationId: teams.primaryChannel.tabs_DeleteRefTeamsApp
+      operationId: teams.primaryChannel.tabs_DeleteTeamsAppByRef
       parameters:
         - name: team-id
           in: path
@@ -12837,7 +12837,7 @@ paths:
         - teams.teamsTemplate
       summary: Get ref of template from teams
       description: The template this team was created from. See available templates.
-      operationId: teams_GetRefTemplate
+      operationId: teams_GetTemplateByRef
       parameters:
         - name: team-id
           in: path
@@ -12861,7 +12861,7 @@ paths:
         - teams.teamsTemplate
       summary: Update the ref of navigation property template in teams
       description: The template this team was created from. See available templates.
-      operationId: teams_SetRefTemplate
+      operationId: teams_SetTemplateByRef
       parameters:
         - name: team-id
           in: path
@@ -12890,7 +12890,7 @@ paths:
         - teams.teamsTemplate
       summary: Delete ref of navigation property template for teams
       description: The template this team was created from. See available templates.
-      operationId: teams_DeleteRefTemplate
+      operationId: teams_DeleteTemplateByRef
       parameters:
         - name: team-id
           in: path
@@ -14323,7 +14323,7 @@ paths:
         - users.userTeamwork
       summary: Get ref of chat from users
       description: The chat between the user and Teams app.
-      operationId: users.teamwork.installedApps_GetRefChat
+      operationId: users.teamwork.installedApps_GetChatByRef
       parameters:
         - name: user-id
           in: path
@@ -14375,7 +14375,7 @@ paths:
         - users.userTeamwork
       summary: Update the ref of navigation property chat in users
       description: The chat between the user and Teams app.
-      operationId: users.teamwork.installedApps_SetRefChat
+      operationId: users.teamwork.installedApps_SetChatByRef
       parameters:
         - name: user-id
           in: path
@@ -14411,7 +14411,7 @@ paths:
         - users.userTeamwork
       summary: Delete ref of navigation property chat for users
       description: The chat between the user and Teams app.
-      operationId: users.teamwork.installedApps_DeleteRefChat
+      operationId: users.teamwork.installedApps_DeleteChatByRef
       parameters:
         - name: user-id
           in: path
